数据库操作完毕

--- a/数据库/## 创建数据库.md
+++ b/数据库/## 创建数据库.md
@@ -1,9 +1,21 @@
+## 查询数据库
+查询全部数据库：
+``` MySql
+show databases;
+```
+
+查询数据库的信息：
+``` MySql
+show create database <DbName>;
+```
+
+
 ## 创建数据库
 语句如下：
-``` Sql
-create database <DbName>
-create database if not exists <DbName> 
-create database <DbName> character set utf-8
+``` MySql
+create database <DbName>;
+create database if not exists <DbName> ;
+create database <DbName> character set utf8;
 ```
 
 以上语句可以混用，语义如下：
@@ -13,3 +25,26 @@ create database <DbName> character set utf-8
 第二句为包含创建检查，此方法不会报错，但会返回是否创建信息。
 <br/>
 第三句为设置数据库内部编码。**三句语句皆可混合使用！**
+
+
+## 修改数据库
+
+#### 修改数据库的编码格式
+``` MySql
+alter database <DbName> character set <目标编码>;
+```
+#### 删除数据库
+``` MySql
+drop database <DbName>;
+```
+#### 带检查的删除数据库
+``` MySql
+drop database is exists <DbName>;
+```
+
+
+## 数据库的基本操作
+#### 打开数据库或使用数据库
+``` MySql
+use <DbName>;
+```
