--- a/数据库/## 创建数据库.md
+++ b/数据库/## 创建数据库.md
@@ -12,7 +12,7 @@ show create database <DbName>;
 
 ## 创建数据库
 语句如下：
-``` MySql
+``` Sql
 create database <DbName>;
 create database if not exists <DbName> ;
 create database <DbName> character set utf8;
@@ -30,21 +30,21 @@ create database <DbName> character set utf8;
 ## 修改数据库
 
 #### 修改数据库的编码格式
-``` MySql
+``` Sql
 alter database <DbName> character set <目标编码>;
 ```
 #### 删除数据库
-``` MySql
-drop database <DbName>;
+``` Sql
+drop Database <DbName>;
 ```
 #### 带检查的删除数据库
-``` MySql
+``` Sql
 drop database is exists <DbName>;
 ```
 
 
 ## 数据库的基本操作
 #### 打开数据库或使用数据库
-``` MySql
+``` Sql
 use <DbName>;
 ```
