--- a/数据库/数据库表.md
+++ b/数据库/数据库表.md
@@ -5,6 +5,18 @@
 小提示
 MySql是一个关系型数据库，其数据表就是一个二维表格，就如同Excel表格相同，表格中的每一列成为字段。
 ```
+### 语法
+``` sql
+create table [if not EXISTS] <TableName>(
+    字段 数据类型(长度) [not null] [unique],
+    字段 数据类型(长度) [not null] [unique],
+    字段 数据类型(长度) [not null] [unique],
+    ………………
+)
+
+```
+后追加的not null意为不可为空，unique为不能重复，这个设定主键不一样哦，if not exists这是一个if判断，用来判断是否存在将要创建的表格。
+
 以下表格作为示例，创建一个名为Student的数据库表。
 小括号中为数据类型
 
@@ -13,20 +25,29 @@ MySql是一个关系型数据库，其数据表就是一个二维表格，就如
 20210809|张三|151|25|数媒1|
 20210810|李四|151|26|数媒2|
 20210811|王五|151|29|数媒3|
-
+<br/>
+要求如下
+#### **以上信息除去电话以外的信息必填！**
+#### **学号是不可重复的！(使用 unique关键字)**
+<br/>
 ``` txt
 小提示
 以下采用中文字符进行命名，但是在实际项目上是不能这样使用的。
 ```
 
 语句如下：
-``` MySql
-use <DbName>
-create table <TableName>(
-    学号 var(8),
-    姓名 varchar(8),
+``` Sql
+use <我的数据库>
+create table Student(
+    学号 char(8) not null unique,
+    姓名 varchar(8) not null,
     电话 varchar(11),
-    年龄 int,
-    班级 varchar(80)
+    年龄 int not null,
+    班级 varchar(80) not null
 )
+```
+
+返回OK即为成功
+``` sql 
+Query OK, 0 rows affected (0.02 sec)
 ```
