--- a/数据库/数据库表.md
+++ b/数据库/数据库表.md
@@ -36,7 +36,7 @@ create table [if not EXISTS] <TableName>(
 ```
 
 语句如下：
-``` Sql
+``` sql
 use <我的数据库>
 create table Student(
     学号 char(8) not null unique,
