修改数据表

--- a/数据库/数据库表.md
+++ b/数据库/数据库表.md
@@ -44,10 +44,37 @@ create table Student(
     电话 varchar(11),
     年龄 int not null,
     班级 varchar(80) not null
-)
+);
 ```
 
 返回OK即为成功
 ``` sql 
 Query OK, 0 rows affected (0.02 sec)
+```
+
+## 修改数据表
+**注意：以下命令均为举例，并不算叠加运行**
+
+语法：
+``` sql
+alter table <表名> <drop | add | modify | change>
+            <字段>
+            -- 请看以下举例子
+```
+
+实例1：删除年龄字段
+``` sql
+alter table Student drop 年龄
+```
+实例：向数据表中增加一个总分字段,为int类型
+``` sql
+alter table Student add 总分 int
+```
+实例3：修改电话的数据类型
+``` sql
+alter table Student modify 电话 varchar(15);
+```
+实例4：把班级字段修改为Class，数据类型改为varchar(100)
+``` sql
+alter table Student change 班级 Class varchar(100);
 ```
